Fix content overflow in the features section

--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,7 @@ a:active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   padding: 0;
   margin: 0;
